--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jobsearch-front",
   "version": "0.1.0",
   "private": true,
+  "homepage":".",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-       "build": "CI= react-scripts build",
+       "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
